# macscribe

./: .gitignore  404.html  DOCS_SETUP.md  README.md  index.html  mkdocs.yml  pyproject.toml
.claude/commands/: publish.md
.github/: BRANCH_PROTECTION.md
.github/workflows/: docs.yml  pr-checks.yml  publish.yml
api-reference/: index.html
contributing/: index.html
docs/: api-reference.md  contributing.md  index.md  license.md
docs/getting-started/: installation.md  quick-start.md
docs/usage/: advanced-options.md  basic-usage.md  examples.md
getting-started/installation/: index.html
getting-started/quick-start/: index.html
license/: index.html
search/: search_index.json
src/macscribe/: cli.py  saver.py
tests/: conftest.py  test_cli.py  test_saver.py
usage/advanced-options/: index.html
usage/basic-usage/: index.html
usage/examples/: index.html
