[project]
name = "macscribe"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kasper Junge", email = "kasperjuunge@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mlx-whisper>=0.4.1",
    "typer>=0.15.1",
    "yt-dlp>=2025.1.12",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
macscribe = "macscribe:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
